--- a/templates/core/search.html
+++ b/templates/core/search.html
@@ -52,7 +52,7 @@
                 {% for post in results %}
                   
                 <div class="post-entry-horzontal">
-                  <a href="{% url 'single' post.slug %}">
+                  <a href="{% url 'single' post.id post.slug %}">
                     <div class="image element-animate" data-animate-effect="fadeIn" style="background-image: url({{post.thumbnail.url}});"></div>
                     <span class="text">
                       <div class="post-meta">
