--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -13,7 +13,7 @@
 
           <div>
             <a
-              href="{% url 'single' post.slug %}"
+              href="{% url 'single' post.id post.slug %}"
               class="a-block d-flex align-items-center height-lg"
               style="background-image: url('{{post.thumbnail.url}}'); "
             >
@@ -69,7 +69,7 @@
 
           <div class="col-md-6">
             <a
-              href="{% url 'single' post.slug %}"
+              href="{% url 'single' post.id post.slug %}"
               class="blog-entry element-animate"
               data-animate-effect="fadeIn"
             >
