--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -16,7 +16,7 @@
         {% for post in popular_posts %}
 
         <li>
-          <a href="{% url 'single' post.slug %}">
+          <a href="{% url 'single' post.id post.slug %}">
             <img
               src="{{post.thumbnail.url}}"
               alt="Image placeholder"
