--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -119,6 +119,31 @@
     </style>
   </head>
   <body>
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v10.0'
+          });
+        };
+
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+      </script>
+
+      <!-- Your Chat Plugin code -->
+      <div class="fb-customerchat"
+        attribution="page_inbox"
+        page_id="108022328037733">
+      </div>
+      
     <div class="wrap">
       <header role="banner">
         <div class="top-bar">
@@ -547,6 +572,7 @@
         })
       </script>
     {% endif %}
+    
     {% block js_down %} {% endblock js_down %}
   </body>
 </html>
