Add Latest Dev Post

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -572,7 +572,8 @@
         })
       </script>
     {% endif %}
-    
+    <!-- Dev.to -->
+    <script src="https://unpkg.com/dev-widget@^1/dist/card.component.min.mjs" type="module"></script>
     {% block js_down %} {% endblock js_down %}
   </body>
 </html>
