--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -70,24 +70,24 @@
   <!-- Start Twitter -->
   <div class="sidebar-box">
     {% if retweeted %}
-      <h3 class="heading">Latest Reweet<a role="button" data-toggle="collapse" data-target="#twitter_widget" style="cursor: pointer;"><i class="fa fa-chevron-down" style="float: right;" aria-hidden="true"></i></a></h3>
+      <h3 class="heading">Latest Reweet</h3>
     {% else %}
-      <h3 class="heading">Latest Tweet<a role="button" data-toggle="collapse" data-target="#twitter_widget" style="cursor: pointer;"><i class="fa fa-chevron-down" style="float: right;" aria-hidden="true"></i></a></h3>
+      <h3 class="heading">Latest Tweet</h3>
     {% endif %}
-    <div id="twitter_widget" class="collapse">
+    <!-- <div id="twitter_widget" class="collapse"> -->
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">{{full_text}}</p>&mdash; iRead (@iReadBot) <a href="https://twitter.com/iReadBot/status/{{tweet_id}}?ref_src=twsrc%5Etfw">{{date}}</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+    <!-- </div> -->
   </div>
   <!-- End Twitter -->
   {% endif %}
 
   <!-- Start DEV -->
-  <div class="sidebar-box">
+  <!-- <div class="sidebar-box">
     <h3 class="heading">Latest Dev Posts<a role="button" data-toggle="collapse" data-target="#dev_widget" style="cursor: pointer;"><i class="fa fa-chevron-down" style="float: right;" aria-hidden="true"></i></a></h3>
     <div id="dev_widget" class="collpase">
       <dev-widget data-username="ireadblog" data-theme="cobalt2" data-sortby="date" data-limit="5" data-width="275px" data-contentheight="300px"></dev-widget>
     </div>
-  </div>
+  </div> -->
   <!-- End DEV -->
 
 </div>
