--- a/templates/core/category.html
+++ b/templates/core/category.html
@@ -9,13 +9,14 @@
       <div class="container">
         <div class="row mb-4">
           <div class="col-md-6">
-            <h2 class="mb-4">{{category.name}}</h2>
+            <h2 class="mb-2">{{category.name}}</h2>
           </div>
         </div>
         <div class="row blog-entries">
           <div class="col-md-12 col-lg-8 main-content">
+            <p>{{category.desc}}</p>
             <div class="row mb-5 mt-5">
-
+              
               <div class="col-md-12">
                 {% for post in posts %}
                   
