--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -7,7 +7,7 @@
       <div class="container">
         <div class="row mb-4">
           <div class="col-md-6">
-            <h1>Contact Me</h1>
+            <h1>Contact Us</h1>
           </div>
         </div>
         <div class="row blog-entries">
@@ -33,7 +33,7 @@
                   <div class="row">
                     <div class="col-md-12 form-group">
                       <label for="message">Write Message</label>
-                      <textarea name="message" id="message" name="message" class="form-control " cols="30" rows="8" required></textarea>
+                      <textarea id="message" name="message" class="form-control " cols="30" rows="8" required></textarea>
                     </div>
                   </div>
                   <div class="row">
