--- a/templates/core/update-post.html
+++ b/templates/core/update-post.html
@@ -79,7 +79,7 @@
 <script>
     CKEDITOR.replace('editor1', {
       height: 500,
-      extraPlugins: 'filebrowser, codesnippet',
+      extraPlugins: 'filebrowser, codesnippet, markdown',
       filebrowserBrowseUrl: '{% url "ckeditor_browse" %}',
       filebrowserUploadMethod: 'form',
       filebrowserUploadUrl: '{% url "ckeditor_upload" %}'
