Add Scroller in Categories

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -41,7 +41,7 @@
 
   <div class="sidebar-box" id="cat_box">
     <h3 class="heading">Categories<a id="new_cat" style="cursor: pointer;"><i class="fa fa-plus" style="float: right;" aria-hidden="true"></i></a></h3>
-    <ul class="categories">
+    <ul class="categories" style="height: 300px; overflow-y: scroll;">
       {% for category in categories %}
 
       <li>
